--- a/Final.ui
+++ b/Final.ui
@@ -138,6 +138,23 @@
       </item>
       <item>
        <layout class="QGridLayout" name="gridLayout_for_">
+        <item row="0" column="2">
+         <widget class="QLabel" name="label_FitMethodFor_X_axis">
+          <property name="text">
+           <string>Fit Mehtod</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="3">
+         <widget class="QLineEdit" name="lineEdit_For_x_axis">
+          <property name="text">
+           <string>5</string>
+          </property>
+          <property name="clearButtonEnabled">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
         <item row="2" column="0">
          <widget class="QLabel" name="label_Y_axis">
           <property name="text">
@@ -146,7 +163,14 @@
          </widget>
         </item>
         <item row="2" column="3">
-         <widget class="QLineEdit" name="lineEdit_For_y_axis"/>
+         <widget class="QLineEdit" name="lineEdit_For_y_axis">
+          <property name="text">
+           <string>9</string>
+          </property>
+          <property name="clearButtonEnabled">
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
         <item row="2" column="2">
          <widget class="QLabel" name="label_FitMethodFor_Y_axis">
@@ -155,13 +179,10 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="3">
-         <widget class="QLineEdit" name="lineEdit_For_x_axis"/>
-        </item>
-        <item row="0" column="2">
-         <widget class="QLabel" name="label_FitMethodFor_X_axis">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_X_axis">
           <property name="text">
-           <string>Fit Mehtod</string>
+           <string>X-axis</string>
           </property>
          </widget>
         </item>
@@ -217,15 +238,15 @@
           </item>
          </widget>
         </item>
-        <item row="0" column="0">
-         <widget class="QLabel" name="label_X_axis">
+        <item row="1" column="3">
+         <widget class="QLineEdit" name="label_Z_axis">
           <property name="text">
-           <string>X-axis</string>
+           <string>7</string>
+          </property>
+          <property name="clearButtonEnabled">
+           <bool>true</bool>
           </property>
          </widget>
-        </item>
-        <item row="1" column="3">
-         <widget class="QLineEdit" name="label_Z_axis"/>
         </item>
         <item row="1" column="2">
          <widget class="QLabel" name="label_for_Z_axis">
@@ -233,6 +254,19 @@
            <string>Over Lapping</string>
           </property>
          </widget>
+        </item>
+        <item row="0" column="4">
+         <spacer name="horizontalSpacerForSqueezingTheAxis">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>70</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
         </item>
        </layout>
       </item>
