--- a/Final.ui
+++ b/Final.ui
@@ -6,29 +6,16 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1301</width>
-    <height>1101</height>
+    <width>1593</width>
+    <height>1160</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout_2">
-    <item row="3" column="1">
-     <spacer name="verticalSpacer_forerror_map">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>400</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="0" column="0" colspan="4">
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0" colspan="3">
      <layout class="QHBoxLayout" name="horizontalLayout_for_equation_and_error">
       <item>
        <layout class="QGridLayout" name="gridLayout_for_equation"/>
@@ -48,20 +35,70 @@
       </item>
      </layout>
     </item>
-    <item row="1" column="4">
-     <spacer name="verticalSpacer_for_main_widget">
+    <item row="1" column="0" colspan="3">
+     <widget class="QWidget" name="PlotWidget" native="true">
+      <property name="styleSheet">
+       <string notr="true">
+background-color: rgb(0, 0, 0);</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="3">
+     <spacer name="verticalSpacerForPlotWidget">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>20</width>
-        <height>501</height>
+        <width>5</width>
+        <height>524</height>
        </size>
       </property>
      </spacer>
     </item>
-    <item row="3" column="3">
+    <item row="2" column="1">
+     <spacer name="horizontalSpacerForErrorMap">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>768</width>
+        <height>5</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="2" column="2">
+     <spacer name="horizontalSpacerForSettings">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>767</width>
+        <height>5</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="3" column="0">
+     <spacer name="verticalSpacerForErrorMap">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>5</width>
+        <height>523</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="3" column="1">
+     <layout class="QVBoxLayout" name="verticalLayout_for_errorMap"/>
+    </item>
+    <item row="3" column="2">
      <layout class="QVBoxLayout" name="verticalLayout_for_seetings">
       <item>
        <layout class="QGridLayout" name="gridLayout_for_plot_Settings">
@@ -130,7 +167,7 @@
         <item row="2" column="0">
          <widget class="QLabel" name="labelForEfficacy">
           <property name="text">
-           <string>Efficency</string>
+           <string>Extrapolation</string>
           </property>
          </widget>
         </item>
@@ -138,23 +175,6 @@
       </item>
       <item>
        <layout class="QGridLayout" name="gridLayout_for_">
-        <item row="0" column="2">
-         <widget class="QLabel" name="label_FitMethodFor_X_axis">
-          <property name="text">
-           <string>Fit Mehtod</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="3">
-         <widget class="QLineEdit" name="lineEdit_For_x_axis">
-          <property name="text">
-           <string>5</string>
-          </property>
-          <property name="clearButtonEnabled">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
         <item row="2" column="0">
          <widget class="QLabel" name="label_Y_axis">
           <property name="text">
@@ -166,6 +186,12 @@
          <widget class="QLineEdit" name="lineEdit_For_y_axis">
           <property name="text">
            <string>9</string>
+          </property>
+          <property name="frame">
+           <bool>true</bool>
+          </property>
+          <property name="echoMode">
+           <enum>QLineEdit::Normal</enum>
           </property>
           <property name="clearButtonEnabled">
            <bool>true</bool>
@@ -179,10 +205,23 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="0">
-         <widget class="QLabel" name="label_X_axis">
+        <item row="0" column="3">
+         <widget class="QLineEdit" name="lineEdit_For_x_axis">
           <property name="text">
-           <string>X-axis</string>
+           <string>5</string>
+          </property>
+          <property name="readOnly">
+           <bool>false</bool>
+          </property>
+          <property name="clearButtonEnabled">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QLabel" name="label_FitMethodFor_X_axis">
+          <property name="text">
+           <string>Fit Mehtod</string>
           </property>
          </widget>
         </item>
@@ -238,6 +277,13 @@
           </item>
          </widget>
         </item>
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_X_axis">
+          <property name="text">
+           <string>X-axis</string>
+          </property>
+         </widget>
+        </item>
         <item row="1" column="3">
          <widget class="QLineEdit" name="label_Z_axis">
           <property name="text">
@@ -254,19 +300,6 @@
            <string>Over Lapping</string>
           </property>
          </widget>
-        </item>
-        <item row="0" column="4">
-         <spacer name="horizontalSpacerForSqueezingTheAxis">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>70</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
         </item>
        </layout>
       </item>
@@ -294,13 +327,6 @@
          <widget class="QPushButton" name="pushButton_For_Open">
           <property name="text">
            <string>Open</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="pushButton_For_Plot">
-          <property name="text">
-           <string>Plot</string>
           </property>
          </widget>
         </item>
@@ -334,46 +360,6 @@
       </item>
      </layout>
     </item>
-    <item row="1" column="0" colspan="4">
-     <widget class="QFrame" name="frame_for_main_widget">
-      <property name="frameShape">
-       <enum>QFrame::StyledPanel</enum>
-      </property>
-      <property name="frameShadow">
-       <enum>QFrame::Raised</enum>
-      </property>
-      <widget class="QWidget" name="PlotWidget" native="true">
-       <property name="geometry">
-        <rect>
-         <x>14</x>
-         <y>5</y>
-         <width>1221</width>
-         <height>451</height>
-        </rect>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">
-background-color: rgb(0, 0, 0);</string>
-       </property>
-      </widget>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <spacer name="horizontalSpacer_forerror_map">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>40</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="3" column="0">
-     <layout class="QVBoxLayout" name="verticalLayout_for_errorMap"/>
-    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -381,7 +367,7 @@ background-color: rgb(0, 0, 0);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1301</width>
+     <width>1593</width>
      <height>21</height>
     </rect>
    </property>
